--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="GITHub">
+    <wb-module deploy-name="GitHub1226">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="GITHub"/>
-        <property name="java-output-path" value="/GITHub/build/classes"/>
+        <property name="java-output-path" value="/GitHub1226/build/classes"/>
+        <property name="context-root" value="GitHub1226"/>
     </wb-module>
 </project-modules>
